write  module two

--- a/H5C3/day01/Code/QBH/css/main.css
+++ b/H5C3/day01/Code/QBH/css/main.css
@@ -1,3 +1,63 @@
+/* 右边导航圆点 */
+#fp-nav {
+  position: fixed;
+  z-index: 100;
+  margin-top: -32px;
+  top: 50%;
+  opacity: 1;
+  transform: translate3d(0,0,0);
+}
+
+#fp-nav.right {
+  right: 17px;
+}
+
+#fp-nav ul li{
+  display: block;
+  width: 14px;
+  height: 13px;
+  margin: 7px;
+  position:relative;
+}
+
+#fp-nav ul li a{
+  display: block;
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+#fp-nav ul li a.active span,
+#fp-nav ul li:hover a.active span {
+  height: 12px;
+  width: 12px;
+  margin: -6px 0 0 -6px;
+  border-radius: 100%;
+}
+
+#fp-nav ul li a span {
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  height: 4px;
+  width: 4px;
+  border: 0;
+  background: #333;
+  left: 50%;
+  top: 50%;
+  margin: -2px 0 0 -2px;
+  transition: all 0.1s ease-in-out;
+}
+
+#fp-nav ul li:hover a span{
+  width: 10px;
+  height: 10px;
+  margin: -5px 0px 0px -5px;
+}
+
 /* 模块一: 标题 */
 
 .qbh-title {
@@ -66,14 +126,12 @@
   bottom: 500px;
   left: 50%;
   margin-bottom: 50px;
-  margin-left: -180px;
+  transform: translateX(-50%);
 }
 
-.qbh-list .desc img {
-  position: absolute;
-  bottom: 0px;
-  left: 0;
-}
+.qbh-list .desc img:nth-child(1) {
+  height: 0;
+} 
 
 .qbh-list .screen {
   width: 990px;
@@ -82,7 +140,7 @@
   bottom: -3px;
   left: 50%;
   margin-left: -495px;
-}
+} 
 
 .qbh-list .screen .search-box {
   position: absolute;
