--- a/mobileProject/day01/Code/com.letao.www/public/frontEnd/css/layout.css
+++ b/mobileProject/day01/Code/com.letao.www/public/frontEnd/css/layout.css
@@ -7,12 +7,16 @@
   color: #fff;
 }
 
-.lt-header .lt-header-search {
+.lt-header .lt-header-search,.lt-header .lt-header-back {
   line-height: 44px;
   font-size: 22px;
   color: #fff;
 }
 
+
+.lt-header .lt-header-back {
+  display: none;
+}
 
 
 /* 底部工具 */
